--- a/src/components/Job/style.scss
+++ b/src/components/Job/style.scss
@@ -8,7 +8,25 @@
   box-shadow: 0 0 15px #d4e9ec;
   padding: 32px;
   margin-bottom: 25px;
-  &-details,
+  &-active{
+    border-left:  5px solid red;
+  }
+  &-details{
+    color: $color-neutral-dark-gray;
+    display: flex;
+    &__item::after{
+       content: '';
+       display: inline-flex;
+       width: 5px;
+       height: 5px;
+       border-radius: 50%;
+       background-color: $color-neutral-dark-gray;
+       margin: 0 17px;
+    }
+    &__item:last-child::after{
+      display: none;
+   }
+  }
   &-skills,
   &__left {
     display: flex;
@@ -26,9 +44,6 @@
       color: $color-primary;
       font-weight: 700;
     }
-    span:last-child {
-      margin-left: 8px;
-    }
     &__name + span {
       margin-left: 15px;
     }
@@ -39,6 +54,7 @@
       text-transform: uppercase;
       border-radius: 15px;
       padding: 8px 6px 6px;
+      margin: 0 8px;
     }
     &__new {
       background-color: $bg-color-primary;
