--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Spartan:wght@500;700&display=swap');
 @import './assets/scss/global.scss';
-
+* {
+  box-sizing: border-box;
+}
+.app__container{
+    position: relative;
+}
 body {
   font-family: 'Spartan', sans-serif;
   font-weight: 15px;
@@ -40,5 +45,6 @@ a {
   margin-bottom: 74px;
   &-img{
     width: 100%;
+    background-color: $bg-color-primary;
   }
 }
